Ajustes schedule e add comentários

--- a/app/views/projects/_list_projects_admin.html.erb
+++ b/app/views/projects/_list_projects_admin.html.erb
@@ -49,11 +49,12 @@
         </div>       
         <br />
           <p>
-         <% if project.end_date < Time.now && project.current_sprint %>
+         
+         <% if project.end_date < Time.now %>
             <div class="button_warning" title="Existem tarefas em atraso">
                 <b> Projeto atrasado </b>   
             </div> 
-           <% else %>
+          <% else %>
             <div class="button_status">
                 <b> Sem alertas </b>   
             </div> 
