--- a/app/views/user_sprint_notifier_mailer/send_late_sprint_email.html.erb
+++ b/app/views/user_sprint_notifier_mailer/send_late_sprint_email.html.erb
@@ -5,9 +5,9 @@
   </head>
 
   <body>
-    <h1>Olá!</h1>
-    <p>A sprint <strong><%= @sprint.name %></strong> foi atualizada com sucesso.</p>
-    <p>Havendo dúvidas contate o administrador.</p>
+    <p>Olá!</p>
+    <p>Você tem uma sprint atrasada.</p>
+    <p>Acesse <%= link_to "#{ ENV['host'] }", "#{ ENV['host'] }" %> </p>
     <br />
     <p>Equipe Agile Kronos.</p>
   </body>
