--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -526,6 +526,23 @@ div#notification_inactived {
     width: 50px; 
 }
 
+.comment_task {
+    width: 60%;
+    background-color:rgb(201, 201, 201);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.comment_task img {
+    padding: 5px;
+    vertical-align:middle
+}
+
+.comment_task a{
+    text-decoration: none;
+    color: #FFF;
+}
+
 .header {
     text-align: center;
     font-size: 20px;
@@ -724,6 +741,10 @@ th {
     max-width: 900px;
   }
 
+  .info_accordion a{
+      text-decoration: none;
+  }
+
   .info_accordion .warning {
         float: left;
         margin-top: -5px;
@@ -749,7 +770,6 @@ th {
     background-color: white;
     overflow: hidden;
     box-shadow: 0px 1px 1px black;
-    
   }
 
   .panel{
