--- a/app/views/function_user_projects/_breadcrumb.html.erb
+++ b/app/views/function_user_projects/_breadcrumb.html.erb
@@ -1,5 +1,5 @@
 <!-- BREADCRUMB -->
-<div class="ui breadcrumb">
+<div class="breadcrumb">
   <br />
   <%= link_to "Projetos", projects_path, class: 'section' %>
   /
