--- a/app/views/projects/_breadcrumb.html.erb
+++ b/app/views/projects/_breadcrumb.html.erb
@@ -1,10 +1,10 @@
 <!-- BREADCRUMB -->
-<div class="breadcrumb">
+<div class="ui breadcrumb">
 <br />
   <%= link_to "Projetos", projects_path, class: 'section' %>
   /
   <%= link_to current_project.name, project_path(current_project), class: 'section' %>
   /
-  <b>Gráficos</b>
+  <b>Board</b>
 </div>
 <!-- /BREADCRUMB -->
