--- a/app/views/projects/_list_projects_default.html.erb
+++ b/app/views/projects/_list_projects_default.html.erb
@@ -33,7 +33,7 @@
         </div>       
         <br />
           <p>
-         <% if project.end_date < Time.now && project.current_sprint %>
+         <% if project.end_date < Time.now.strftime('%d/%m/%Y') %>
             <div class="button_warning" title="Existem tarefas em atraso">
                 <b> Projeto atrasado </b>   
             </div> 
