--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -37,8 +37,8 @@
            <div id="progressbar" class="ui-progressbar-value ui-widget-header ui-corner-left" style="border: 1px solid black; color: black; height:30px; padding-top: 10px; text-align: center; width:<%= @project.progress %>%;">
           <p>Progresso <%= @project.progress %>%</p>
      </div>
-     
-     <% if @project.end_date < Time.now && @project.current_sprint %>
+    
+     <% if @project.end_date < Time.now.strftime("%d/%m/%Y") %>
              <div class="button_warning">
                 <b> Projeto atrasado </b>   
             </div> 
