--- a/app/views/tasks/_breadcrumb.html.erb
+++ b/app/views/tasks/_breadcrumb.html.erb
@@ -5,6 +5,6 @@
   /
   <%= link_to current_project.name, project_path(current_project), class: 'section' %>
   /
-  <b>Gráficos</b>
+  <b>Tasks</b>
 </div>
 <!-- /BREADCRUMB -->
