--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,7 +1,8 @@
 <br />
 <div class="container">
+<br />
     <h2>Editando task</h2>  
-     <br />
+    <%= render 'tasks/breadcrumb' %>
 </div>
 
 <!-- /NAVBAR -->
