--- a/app/views/user_stories/edit.html.erb
+++ b/app/views/user_stories/edit.html.erb
@@ -1,9 +1,12 @@
 <p></p>
 
 <div class="container">
+<br />
   <div class="ui menu">
-    <strong class="item active">Editando User Story</strong>
+    <h2>Editando User Story</h2>
+    <%= render 'user_stories/breadcrumb' %>
   </div>
+
 
   <%= render 'form' %>
   
