--- a/app/views/function_user_projects/index.html.erb
+++ b/app/views/function_user_projects/index.html.erb
@@ -40,7 +40,14 @@
       <% @function_user_projects.each do |function_user_project| %> 
         <tr>
 
-                    <td><%= function_user_project.user.name %> </td>
+                    <td>
+                     <% if function_user_project.user.avatar.attached? %>
+                     <%= image_tag(function_user_project.user.avatar_thumbnail, :class=> "image_thumbnail") %>
+                 <% else %>
+                     <%= image_tag("profile-no-image.png", :class=> "image_thumbnail") %>
+                 <% end %>
+                 <br />
+                 <%= function_user_project.user.name %> </td>
                     <td><%= function_user_project.function.name %></td>
                     <td>
       
