--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,35 +1,127 @@
 <div class="container"> 
-    <div class="ui menu">
-      <a href="#" class="item active"><strong>Task</strong></a>
-      <%= link_to 'Novo', new_task_path, class: 'item' %>
-      <%= link_to 'Editar', edit_task_path(@task), class: 'item' %>
-      <%= link_to 'Voltar', user_stories_path, class: 'item' %>
+<%= render 'tasks/breadcrumb' %>
+    <div class="align_right">
+      <%= link_to 'Nova task', new_task_path, class: 'green_button' %>
+      <%= link_to 'Editar', edit_task_path(@task), class: 'blue_button' %>    
+      <%= link_to 'Voltar', user_stories_path, class: 'red_button' %>
     </div>
+<br />
 
-      <p>
-        <strong>Description:</strong>
+       
+<h2>
+<% if @task.kind_id == 1 %>
+   <%= image_tag('bug.png', title: "Task do tipo BUG") %>
+<% else %>
+   <%= image_tag('clipboard-task.png', title: "Task do tipo Sub-task") %>
+<% end %>
+
+
+TK-<%= current_project.initial %>-<%= @task.id %> <%= @task.title %></h2>
+<br />
+
+<p><strong>Data de criação</strong></p>
+<%= @task.created_at.in_time_zone('America/Sao_Paulo').strftime('%d/%m/%Y %H:%M:%S')%>
+<br />
+<br />
+<p><strong>Prioridade</strong></p>
+        <% if @task.priority_id == 1 %>       
+          <b class="high_priority">Alta </b>
+        <% end %>
+
+        <% if @task.priority_id == 2 %>   
+          <b class="medium_priority">Média </b>
+        <% end %>
+
+        <% if @task.priority_id == 3 %>
+           <b class="low_priority">Baixa </b>
+        <% end %>
+<br />
+<br />
+      <p><strong>Status</strong></p>
+        <% if @task.status == 1 %>
+            Pendente
+        <% end %>
+        <% if @task.status == 2 %>
+            Desenvolvimento
+        <% end %>
+        <% if @task.status == 3 %>
+            Code Review
+        <% end %>
+        <% if @task.status == 4 %>
+            QA
+        <% end %>
+        <% if @task.status == 5 %>
+            Concluída
+        <% end %>
+      </p>
+  <br /> 
+  <p><strong>Solicitante</strong></p>
+             <% if @task.user.avatar.attached? %>
+                  <%= image_tag(@task.user.task_avatar_thumbnail, :class=> "image_thumbnail") %>
+                  <%= @task.user.name %> 
+             <% else %>
+                  <%= image_tag("profile-no-image.png", :class=> "image_thumbnail") %>
+             <% end %>
+     <br /> 
+<br />
+  <p><strong>Responsável</strong></p>
+
+             <% if @task.function_user_project.nil? %>
+               -
+             <% elsif @task.function_user_project.user.avatar.attached? %>
+                  <%= image_tag(@task.function_user_project.user.task_avatar_thumbnail, :class=> "image_thumbnail") %>
+                  <%= @task.function_user_project.user.name %>
+             <% else %>
+                  <%= image_tag("profile-no-image.png", :class=> "image_thumbnail") %>
+                  <%= @task.function_user_project.user.name %>
+             <% end %>
+                  
+     <br /> 
+    <br />  
+        <strong>Descrição</strong>
+        <br />
+        <br />
         <%= @task.description %>
-      </p>
-            <p>
-        <strong>End date:</strong>
-        <%= @task.end_date %>
-      </p>
-            <p>
-        <strong>Start date:</strong>
-        <%= @task.start_date %>
-      </p>
-            <p>
-        <strong>Status:</strong>
-        <%= @task.status %>
-      </p>
-            <p>
-        <strong>User story:</strong>
-        <%= @task.user_story.description %>
+<br />
+ <br />
+  
+  <% unless @task.comments.count == 0%>
+    <h4> Comentários <%= @task.comments.count  %></h4>
+  <% end %>
+      <br />
+      <% @task.comments.each do |comment| %>
+            <div class="comment_task">
+                    <% if comment.user.avatar.attached? %>
+                         <%= image_tag(comment.user.avatar_thumbnail, :class=> "image_thumbnail") %>
+                    <% else %>
+                         <%= image_tag("profile-no-image.png", :class=> "image_thumbnail") %>
+                    <% end %>
 
-        <strong>User:</strong>
-        <%= @task.priority_id %>
-      </p>
-      
+               <b><%= comment.user.name %></b> 
+               - <%= comment.created_at.in_time_zone('America/Sao_Paulo').strftime('%d/%m/%Y %H:%M:%S') %>
+               <br />
+               <%= comment.content %>
+              <br />
+              <br />
+
+               <%= link_to "Excluir", task_comment_path(@task, comment),
+                   method: :delete,
+                   data: { confirm: "Deseja deletar o comentário?" },
+                   class: "mini_red_button" if policy(comment).destroy? 
+               %>
+
+             </div>
+           <br />
+         <% end %>
+       
+         <div>
+            <h4> Adicionar comentário </h4>
+            <%= form_for([@task, @task.comments.build], html: {class: 'form'}) do |comment| %>
+                  <%= comment.text_area :content %>
+                  <br />
+                  <br />
+                  <%= comment.button "Enviar comentário",  class: 'save blue_button' %>
+            <% end %>
+         <br />
+      </div>      
  </div>
-
-
