--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -20,10 +20,10 @@
          <br />
           <h1>Editar perfil</h1>
           <br />
-            <% if current_user.avatar.attached? %>
-           <%= image_tag(current_user.avatar_thumbnail, :class=> "image_profile") %>
+           <% if current_user.avatar.attached? %>
+            <%= image_tag(current_user.avatar_thumbnail, :class=> "image_profile") %>
            <% else %>
-            <% image_tag("profile-no-image.png", :class=> "image_profile") %>
+            <%= image_tag("profile-no-image.png", :title=> current_user.name, :class=> "image_thumbnail") %>  
            <% end %>
            
       
