--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -181,7 +181,6 @@ footer a {
 .alert_danger {
     padding: 10px;
     margin: 20px;
-    width: 355px;
     background-color: #f44336;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -207,6 +206,60 @@ footer a {
 /**********************************************************/
 /*************** M E D I A S   Q U E R I E S **************/
 /**********************************************************/
+@media only screen and (min-width:1900px){
+
+    * {
+        margin:0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    }
+
+    div#box-center {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 30%;
+        height: 90px auto;
+        padding: 20px;
+        margin-top: -49px;
+        transform: translate(-50%, -50%);
+        background-color: rgb(255, 255, 255);
+        -webkit-box-shadow: 0px 2px 11px 1px rgba(0,0,0,0.49); 
+        box-shadow: 0px 2px 11px 1px rgba(0,0,0,0.49);
+        border-radius: 15px;
+    }
+    
+
+    img#logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 200px;
+        margin-top: 90px;
+        
+    }
+
+    img#image-left{
+        position: absolute;
+        display: flex;
+        top: 0;
+        float: left;
+        width: 420px;
+        height: 420px;
+        transform: translate(27%, 50%);
+    }
+
+    img#image-right{
+        position: absolute;
+        display: block;
+        top: 0;
+        width: 420px;
+        height: 450px;
+        transform: translate(320%, 35%);
+      }
+}
+
 
 @media only screen and (max-width:1024px){ 
     img#logo {
@@ -216,6 +269,7 @@ footer a {
         margin-right: auto;
         width: 200px;
         margin-top: 0 auto;
+
     }
     img#image-left, img#image-right{
         display: none;
