--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -2,6 +2,7 @@
     margin: 0;      
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
 }
 
 .logo{
@@ -519,15 +520,18 @@ div#notification_inactived {
     border-color:#797979;
 }
 
-
 .content_task{
-    width: 180px;   
-    padding-top: 15px;
-    padding-left: 5px;
-    padding-bottom: 15px;
-    border-style:solid;
+    width: 250px;   
+    border-style: solid;
     border-width: 1px;
     border-color:#797979;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-shadow: -1px 1px 5px 3px rgba(146, 146, 146, 0.89);
+    -webkit-box-shadow: -1px 1px 5px 3px rgba(146, 146, 146, 0.89);
+    -moz-box-shadow: -1px 1px 5px 3px rgba(146, 146, 146, 0.89);
+
 }
 
 .extra_content{
