--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -116,19 +116,13 @@
 
        <% if sprint.end_date < Time.now.strftime("%d/%m/%Y") && sprint.sprint_status == 'ATIVA' %>
          <div>
-           <b>Dias em atraso:</b> < style="color: red;"><%= sprint_days_count %></i>
-           
+           <b>Dias em atraso:</b>
+           <i style="color: red;"><%= sprint_days_count(sprint.id) %></i>
          </div>
       <% end %>
-
+        
+        
        <% if sprint.sprint_status == 'FINALIZADA' %>
-         <div>
-         <%if sprint_days_finished_count.nil? %>
-           <b>Dias em atraso:</b>  Nenhum atraso 
-         </div>
-         <% else %>
-         <b>Dias em atraso:</b> <i style="color: red;"> <% sprint_days_finished_count %></i>
-         <% end %>
          <div>
            <b>Finalizada em:</b> <%= sprint.updated_at.in_time_zone('America/Sao_Paulo').strftime('%d/%m/%Y %H:%M:%S') %>
          </div>
