--- a/app/views/projects/chart.html.erb
+++ b/app/views/projects/chart.html.erb
@@ -29,6 +29,8 @@
 </div>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+      
+      
     <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart']});
         google.charts.setOnLoadCallback(drawChart);
@@ -53,6 +55,7 @@
           chart.draw(data, options);
         }
     </script>
+
     <!--
     END User Stories piechart
     -->
@@ -80,8 +83,7 @@
    <!--
     END Status bug piechart
     -->
-  
-       <script type="text/javascript">
+    <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart']});
         google.charts.setOnLoadCallback(drawChart);
 
@@ -104,7 +106,7 @@
 
           chart.draw(data, options);
         }
-      </script>
+    </script>
     <!--
     END Use Stories piechart
     -->
@@ -135,22 +137,22 @@
 
    <br />
 
-      <div class="ui two cards">
+      <div>
           <div class="card">
-           <div id="piechart_user_stories" style="width: 500px; height: 300px;"></div>
+           <div id="piechart_user_stories" style="width: 400px; height: 300px;"></div>
           </div>
           <% if @project.tasks.empty? %>
           <% else %>
               <div class="card">    
-                  <div id="piechart_task" style="width: 500px; height: 300px;"></div>
+                  <div id="piechart_task" style="width: 400px; height: 300px;"></div>
               </div>
 
                <div class="card">
-                    <div id="piechart_status_subtask" style="width: 530px; height: 300px;"></div> 
+                    <div id="piechart_status_subtask" style="width: 400px; height: 300px;"></div> 
                </div>
 
                <div class="card">
-                    <div id="piechart_status_bug" style="width: 530px; height: 300px;"></div> 
+                    <div id="piechart_status_bug" style="width: 400px; height: 300px;"></div> 
                </div>
           <% end %>
       </div>
