--- a/app/views/projects/chart.html.erb
+++ b/app/views/projects/chart.html.erb
@@ -20,17 +20,16 @@
 
 <div class="content_charts">
 
-  <b> Quantidade de User Stories:</b> <%= user_story_by_project_count  %> <br />
-  <b> Quantidade de Sprint:</b> <%= sprint_by_project_count %> <br />
-  <b> Quantidade de tarefas do tipo "Sub-task":</b> <%= sub_task_by_project_count %> <br />
-  <b> Quantidade de tarefas do tipo "Bug": </b> <%= bug_by_project_count %> <br />
-
+  <b> User Stories:</b> <%= user_story_by_project_count  %> <br />
+  <b> Sprints:</b> <%= sprint_by_project_count %> <br />
+  <b> Tarefas do tipo "Sub-task":</b> <%= sub_task_by_project_count %> <br />
+  <b> Tarefas do tipo "Bug": </b> <%= bug_by_project_count %> <br />
+  <b> Membros do squad: </b><%= users_by_project_count %>
 
 </div>
 
+
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-      
-      
     <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart']});
         google.charts.setOnLoadCallback(drawChart);
@@ -82,7 +81,7 @@
       </script>
    <!--
     END Status bug piechart
-    -->
+   -->
     <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart']});
         google.charts.setOnLoadCallback(drawChart);
@@ -135,33 +134,74 @@
         }
       </script>
 
-   <br />
+<script type="text/javascript">
+      google.charts.load('current', {'packages':['bar']});
+      google.charts.setOnLoadCallback(drawStuff);
+
+      function drawStuff() {
+        var data = new google.visualization.arrayToDataTable([
+          ['Membros', 'Quantidade'],
+        <% task_by_users.each do |ts| %>
+            ["<%= ts['name'] %>", <%= ts['COUNT(*)'] %>],
+        <% end %>    
+        ]);
+
+        var options = {
+          title: 'Relação de Membros x Tasks',
+          width: 800,
+          legend: { position: 'none' },
+          chart: { title: 'Relação de Membros x Tasks',
+                   subtitle: 'BUGs e SubTaks' },
+          bars: 'horizontal', // Required for Material Bar Charts.
+          axes: {
+            x: {
+              0: { side: 'top', label: 'Quantidade'} // Top x-axis.
+            }
+          },
+          bar: { groupWidth: "90%" }
+        };
+
+        var chart = new google.charts.Bar(document.getElementById('top_x_div'));
+        chart.draw(data, options);
+      };
+    </script>
+ 
+ 
 
       <div>
+          
+          <% if @project.tasks.empty? %>
+          <% else %>
+
+ <div class="card">
+                  <div id="top_x_div" style="width: 900px; height: 500px;"></div> 
+              </div>
+<br/>
+
           <div class="card">
            <div id="piechart_user_stories" style="width: 400px; height: 300px;"></div>
           </div>
-          <% if @project.tasks.empty? %>
-          <% else %>
+             
+
+
               <div class="card">    
-                  <div id="piechart_task" style="width: 400px; height: 300px;"></div>
+                <div id="piechart_task" style="width: 400px; height: 300px;"></div>
               </div>
 
-               <div class="card">
-                    <div id="piechart_status_subtask" style="width: 400px; height: 300px;"></div> 
-               </div>
+              <div class="card">
+                <div id="piechart_status_subtask" style="width: 400px; height: 300px;"></div> 
+              </div>
 
-               <div class="card">
-                    <div id="piechart_status_bug" style="width: 400px; height: 300px;"></div> 
-               </div>
+              <div class="card">
+                <div id="piechart_status_bug" style="width: 400px; height: 300px;"></div> 
+              </div>
+             <br />
+          
+
           <% end %>
       </div>
 
-      <div class="ui one cards">
-          <div class="card">
-               <div id="top_x_div" style="width: 900px; height: 500px;"></div>
-          </div>
-      </div>
+         
 
     </div> 
 <% end %>
